# ONDM_2026_Siamese

./: .gitignore  CITATION.cff  LICENSE  PROJECT_README.md  README.md  REQUIREMENTS_SIMPLE.txt  RESUMO_PORTUGUES.md  REVIEW_SUMMARY.md  compare_approaches.py  das_foundation_model.py  data_loader.py  dataset.ipynb  diagnose_training_issues.py  evaluate_siamese.py  example.py  example_siamese.py  generate_architecture_diagram.py  pyproject.toml  requirements.in  requirements.txt  retrain_siamese_with_multisim_test.py  run_all_training.sh  run_cnn.sh  run_job.sh  run_siamese.sh  run_triplet.sh  siamese.py  siamese_triplet.py  test.ipynb  test_mlp_balanced.py  train_cnn.py  train_cnn_classifier.py  train_ffnn_classifier.py  train_mlp.py  train_mlp_classifier.py  train_siamese.py  visualize_results.ipynb
ONDM26_paper/: README.md  data_loader.py  train_mlp.py
ONDM26_paper/siamese_multisim/: __init__.py
checkpoints/: slurm-5427485.out
mlp_results_20260120_115014/: history.npy  test_results.npy
mlp_results_20260128_070258/: history.npy  test_results.npy
paper_figures/: comparison_metrics.csv  comparison_metrics.tex
references/: ofs.md  s.md
siamese_multisim/: README.md  __init__.py  evaluation.py  main.py  models.py  test_siamese_full.py  training.py  visualization.py
