[project]
name = "das-event-classification"
version = "0.1.0"
description = "DAS Event Classification using CNN, MLP, and Siamese Networks"
authors = [
    { name = "Andrei Ribeiro", email = "andreinogrib@gmail.com" },
    { name = "Carlos Natalino" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "scikit-learn",
    "h5py",
    "ipykernel",
    "matplotlib",
    "torch",
]

[project.urls]
Repository = "https://github.com/carlosnatalino/2026-ICMLCN-Siamese"

[tool.uv]
package = false
